html updated with new text

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Keenan Hallas Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Keenan Hallas - Web Developer In Training</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -32,10 +32,11 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Hi there. Let me help with your next site some day.</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Welcome to my portfolio of web design work! Please browse the site, 
+						and if you like what you see I'd love to discuss working with you 
+						on your next project down the road!</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -48,9 +49,10 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I am currently a student attending Lambda School, enrolled in 
+						the part-time full stack web development track. I look
+						forward to working with you in the future once I've
+						honed my skills a bit more!</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -61,9 +63,10 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Hey, I'm Keenan, a Kentucky-based web developer-in-training who's
+						 looking forward to making some beautiful sites for awesome clients
+						 in the future!
+					</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -73,9 +76,10 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Below you can see a bit of my early web development work so far. I will add to this
+							 list regularly with each project I complete. Please check back regularly if you're
+							  curious what I'm up to in the realm of wev dev!
+						</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -107,8 +111,10 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Say Hi!</h2>
+						<p>I'm not taking clients yet, but please feel free to reach out if you'd like to work together 
+							someday!
+						</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
@@ -134,13 +140,11 @@
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Keenan Hallas</li><li>A modified <a href="https://html5up.net">HTML5 UP</a> design</li>
 					</ul>
 
 			</footer>
