project complete - there are still some extra things beyond MVP that I want to figure out

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -32,7 +32,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hi there. Let me help with your next site some day.</h2>
+						<h2>Hi there. Let me help with your next site someday.</h2>
 					</header>
 					<p>Welcome to my portfolio of web design work! Please browse the site, 
 						and if you like what you see I'd love to discuss working with you 
@@ -81,26 +81,26 @@
 							  curious what I'm up to in the realm of wev dev!
 						</p>
 					</header>
-
+					
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/sweet-eats.png" class="image fit"><img src="images/sweet-eats.png" title="Sweet Eats Bakery Site: https://codepen.io/k-hal/full/yLNYajq" alt="Sweet Eats Bakery site" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/great-idea1.png" class="image fit"><img src="images/great-idea1.png" title="Great Idea Tech Company Site: https://github.com/keenanhallas/UI-III-Flexbox" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/great-idea2.png" class="image fit"><img src="images/great-idea2.png" title="Great Idea Tech Company Site: https://github.com/keenanhallas/UI-III-Flexbox" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/great-idea3.png" class="image fit"><img src="images/great-idea3.png" title="Great Idea Tech Company Site: https://github.com/keenanhallas/UI-III-Flexbox" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="images/lambda-page1.png" class="image fit"><img src="images/lambda-page1.png" title="Lambda School Site: https://tinyurl.com/urn29d6" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/lambda-page2.png" class="image fit"><img src="images/lambda-page2.png" title="Lambda School Site: https://tinyurl.com/urn29d6" alt="" /></a>
 							</article>
 						</div>
 
