--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -32,7 +32,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hi there. Let me help with your next site someday.</h2>
+						<h2>Hi there. Let me help with your next site.</h2>
 					</header>
 					<p>Welcome to my portfolio of web design work! Please browse the site, 
 						and if you like what you see I'd love to discuss working with you 
